--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -9,7 +9,7 @@
      <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
  </head>
  <body class="bg-gray-100 font-mono">
-     <div class="w-full h-screen bg-svg-picture  bg-center bg-cover  relative">
+     <div class="w-full h-screen bg-svg-picture  bg-center bg-cover relative">
          <!-- horizontal nav -->
          <div id="hnav" class=" transition-all duration-500 ease-linear float-right h-20 leading-20 w-full bg-white flex justify-between px-3 ">
              <div class="flex justify-center items-center space-x-3 font-bold">
@@ -35,8 +35,8 @@
               <li><a href=""><i class="fas fa-users   px-4"></i><span>users</span></a></li>
              </ul>
             </div>
-            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 animate-pulse ">
-                <tr class="border-b-1  font-extrabold">
+            <table class="text-white flex items-center flex-col  w-[90%] h-screen text-center  mx-auto py-16 animate-pulse">
+                <tr class="border-b-1  font-extrabold bg-white text-black">
                   <th  class="px-[40px] font-extrabold">Number</th>
                   <th  class="px-[40px] font-extrabold">Name</th>  
                   <th  class="px-[40px] font-extrabold">L.Name</th>  
