--- a/public/dashbourd.html
+++ b/public/dashbourd.html
@@ -15,7 +15,7 @@
              <div class="flex justify-center items-center space-x-3 font-bold">
                  <h3>Sharifi High School</h3>
              </div>
-             <div class="flex  justify-center items-center space-x-4  font-bold">
+             <div class="lg:flex  justify-center items-center space-x-4  font-bold">
                  <img class="h-14 w-14 rounded-full" src="./img/zahra.jpg" >
                  <h4>Zahra Ahmadi</h4>
                  <i class="fas fa-bell"></i>
