--- a/public/login-page.html
+++ b/public/login-page.html
@@ -26,7 +26,7 @@
                 Log in </a></button>
             <div class=" flex justify-between items-between  font-bold ml-[15px] text-xl text-white "> 
             <h5>Don't have an account ? </h5>
-            <a href="#" class="mr-[20%] ml-[15px] text-[20px]" >Register</a>
+            <a href="#" class="lg:mr-[20%] ml-[15px] text-[20px]" >Register</a>
         </div>
     </form>
     </div>
