--- a/public/card.html
+++ b/public/card.html
@@ -17,7 +17,7 @@
   const cardContainer = document.getElementById("card-container");
 
   const cardsData = [
-    { title: "کوه", description: "طبیعت کوهستان", image: "https://source.unsplash.com/400x300/?mountain" },
+    { title: "کوه", description: "طبیعت کوهستان", image: "../public/img/mo.jpg" },
     { title: "دریا", description: "دریا در غروب", image: "https://source.unsplash.com/400x300/?sea" },
     { title: "جنگل", description: "طبیعت سرسبز", image: "https://source.unsplash.com/400x300/?forest" },
     { title: "شهر", description: "نورهای شبانه", image: "https://source.unsplash.com/400x300/?city,night" },
