--- a/public/card.html
+++ b/public/card.html
@@ -18,7 +18,7 @@
 
   const cardsData = [
     { title: "کوه", description: "طبیعت کوهستان", image: "../public/img/mo.jpg" },
-    { title: "دریا", description: "دریا در غروب", image: "https://source.unsplash.com/400x300/?sea" },
+    { title: "دریا", description: "دریا در غروب", image: "../public/img/rever.jpg" },
     { title: "جنگل", description: "طبیعت سرسبز", image: "https://source.unsplash.com/400x300/?forest" },
     { title: "شهر", description: "نورهای شبانه", image: "https://source.unsplash.com/400x300/?city,night" },
     { title: "بیابان", description: "شن‌های روان", image: "https://source.unsplash.com/400x300/?desert" },
