--- a/public/card.html
+++ b/public/card.html
@@ -19,8 +19,8 @@
   const cardsData = [
     { title: "کوه", description: "طبیعت کوهستان", image: "../public/img/mo.jpg" },
     { title: "دریا", description: "دریا در غروب", image: "../public/img/rever.jpg" },
-    { title: "جنگل", description: "طبیعت سرسبز", image: "https://source.unsplash.com/400x300/?forest" },
-    { title: "شهر", description: "نورهای شبانه", image: "https://source.unsplash.com/400x300/?city,night" },
+    { title: "جنگل", description: "طبیعت سرسبز", image: "../public/img/tree.jpg" },
+    { title: "شهر", description: "نورهای شبانه", image: "../public/img/city.jpg" },
     { title: "بیابان", description: "شن‌های روان", image: "https://source.unsplash.com/400x300/?desert" },
     { title: "دریاچه", description: "آرامش آب", image: "https://source.unsplash.com/400x300/?lake" },
     { title: "غروب", description: "آسمان رنگی", image: "https://source.unsplash.com/400x300/?sunset" },
