--- a/public/card.html
+++ b/public/card.html
@@ -21,7 +21,7 @@
     { title: "دریا", description: "دریا در غروب", image: "../public/img/rever.jpg" },
     { title: "جنگل", description: "طبیعت سرسبز", image: "../public/img/tree.jpg" },
     { title: "شهر", description: "نورهای شبانه", image: "../public/img/city.jpg" },
-    { title: "بیابان", description: "شن‌های روان", image: "https://source.unsplash.com/400x300/?desert" },
+    { title: "بیابان", description: "شن‌های روان", image: "../public/img/biyaban.jpg" },
     { title: "دریاچه", description: "آرامش آب", image: "https://source.unsplash.com/400x300/?lake" },
     { title: "غروب", description: "آسمان رنگی", image: "https://source.unsplash.com/400x300/?sunset" },
     { title: "ابر", description: "ابرهای زیبا", image: "https://source.unsplash.com/400x300/?cloud" },
