--- a/public/card.html
+++ b/public/card.html
@@ -22,10 +22,10 @@
     { title: "جنگل", description: "طبیعت سرسبز", image: "../public/img/tree.jpg" },
     { title: "شهر", description: "نورهای شبانه", image: "../public/img/city.jpg" },
     { title: "بیابان", description: "شن‌های روان", image: "../public/img/biyaban.jpg" },
-    { title: "دریاچه", description: "آرامش آب", image: "https://source.unsplash.com/400x300/?lake" },
-    { title: "غروب", description: "آسمان رنگی", image: "https://source.unsplash.com/400x300/?sunset" },
-    { title: "ابر", description: "ابرهای زیبا", image: "https://source.unsplash.com/400x300/?cloud" },
-    { title: "برف", description: "منظره زمستانی", image: "https://source.unsplash.com/400x300/?snow" }
+    { title: "دریاچه", description: "آرامش آب", image: "../public/img/daryacha.jpg" },
+    { title: "غروب", description: "آسمان رنگی", image: "../public/img/ghorob.jpg" },
+    { title: "ابر", description: "ابرهای زیبا", image: "../public/img/abar.jpg" },
+    { title: "برف", description: "منظره زمستانی", image: "../public/img/barf.jpg" }
   ];
 
   cardsData.forEach((card) => {
