--- a/public/project.html
+++ b/public/project.html
@@ -8,8 +8,8 @@
     <script src="project.js" defer></script>
 </head>
 <body>
-    <div class="h-screen bg-[url(../public/img/backg.jpg)] bg-cover p-12 rounded-tr-2xl  rounded-bl-2xl mx-auto flex ">
-        <div class="bg-[url(../public/img/wood1.webp)] w-[80%] rounded-2xl">
+    <div class="h-screen bg-[url(../public/img/backg.jpg)] bg-cover p-12 rounded-tr-2xl  rounded-bl-2xl mx-auto flex  ">
+        <div class="bg-[url(../public/img/wood1.webp)] w-[80%] rounded-tl-2xl  rounded-br-2xl mx-auto">
             <h1 class="text-3xl text-amber-100 text-center font-bold my-5">فاصله یاب</h1>
                  <div >
             <button class="bg-amber-100 w-[80px] ml-4 p-1.5 rounded-tl-2xl rounded-br-2xl">زمان</button>
