--- a/public/project.html
+++ b/public/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +9,43 @@
 </head>
 <body>
     <div class="h-screen bg-[url(../public/img/backg.jpg)] bg-cover p-12 rounded-tr-2xl  rounded-bl-2xl mx-auto flex  ">
-        <div class="bg-[url(../public/img/wood1.webp)] w-[80%] rounded-tl-2xl  rounded-br-2xl mx-auto">
+        <div class="bg-[url(../public/img/wood1.webp)] w-[80%] rounded-tl-3xl  rounded-br-3xl mx-auto">
+            
             <h1 class="text-3xl text-amber-100 text-center font-bold my-5">فاصله یاب</h1>
                  <div >
-            <button class="bg-amber-100 w-[80px] ml-4 p-1.5 rounded-tl-2xl rounded-br-2xl">زمان</button>
-            <button class="bg-amber-100 w-[80px] ml-4 p-1.5 rounded-tl-2xl rounded-br-2xl">فاصله</button>
+                    <div class="mx-32 -my-2 ">
+            <button class="bg-amber-100  w-[80px]  p-1.5 rounded-tl-2xl rounded-br-2xl">زمان</button>
+            <button class="bg-amber-100  w-[80px]  p-1.5 rounded-tl-2xl rounded-br-2xl">فاصله</button>
+                    </div>
         </div>
-        <div class="flex justify-between h-fit mx-auto">
-                        <input class=" h-[43px] bg-amber-100 mt-5"   type="text" placeholder="enter">
-            <img class="p-4 h-[400px] shadow-xl shadow-black"   src="../public/img/mab.png" alt="">
+        <div class="flex justify-between h-fit ml-28 text-center mt-2 ">
+            <div class="flex flex-col shadow-2xl shadow-black h-[400px] w-[380px]  ">
+                    <select class="w-[150px]  outline-0 focus:outline-0 h-[40px] mx-5 my-2 border bg-amber-100 rounded-tl-2xl rounded-br-2xl  ">
+              <option value="هرات">هرات</option>
+              <option value="کابل">کابل</option>
+              <option value="مزار">مزار</option>
+              <option value="کندهار">کندهار</option>
+              <option value="غزنی">غزنی</option>
+            </select>
 
+
+                     <select class="w-[150px]  outline-0 focus:outline-0 h-[40px] mx-5 my-2 border bg-amber-100 rounded-tl-2xl rounded-br-2xl ">
+              <option value="کندهار">کندهار</option>
+              <option value="کابل">کابل</option>
+              <option value="مزار">مزار</option>
+            <option value="هرات">هرات</option>
+              <option value="غزنی">غزنی</option>
+                <option value=" جلال آباد">جلال آباد</option>
+            </select>
+<h1 class="text-amber-100 ml-10 my-2">سرعت تان را وارد کنید</h1>
+<input class="bg-amber-100 outline-0 focus:outline-0 p-2 mx-auto rounded-tl-2xl  rounded-br-2xl"  type="text" placeholder="Enter your speed ">
+         <button class="p-1.5 font-bold bg-amber-100 mx-10 my-2.5  rounded-tl-2xl  rounded-br-2xl ">دریافت فاصله زمانی</button>
+            </div>
+            <div class="h-[400px] w-[500px] shadow-2xl shadow-black">
+            <img class="p-4 h-[400px]  bg-transparent"   src="../public/img/mab.png" alt="">
+            </div>
         </div>
+            
         </div>
    
     </div>
