--- a/public/card.html
+++ b/public/card.html
@@ -26,6 +26,9 @@
     { title: "غروب", description: "آسمان رنگی", image: "../public/img/ghorob.jpg" },
     { title: "ابر", description: "ابرهای زیبا", image: "../public/img/abar.jpg" },
     { title: "برف", description: "منظره زمستانی", image: "../public/img/barf.jpg" }
+        { title: "غروب", description: "آسمان رنگی", image: "../public/img/ghorob.jpg" },
+    { title: "ابر", description: "ابرهای زیبا", image: "../public/img/abar.jpg" },
+    { title: "برف", description: "منظره زمستانی", image: "../public/img/barf.jpg" }
   ];
 
   cardsData.forEach((card) => {
