--- a/public/card.html
+++ b/public/card.html
@@ -29,6 +29,9 @@
         { title: "غروب", description: "آسمان رنگی", image: "../public/img/ghorob.jpg" },
     { title: "ابر", description: "ابرهای زیبا", image: "../public/img/abar.jpg" },
     { title: "برف", description: "منظره زمستانی", image: "../public/img/barf.jpg" }
+        { title: "کوه", description: "طبیعت کوهستان", image: "../public/img/mo.jpg" },
+    { title: "دریا", description: "دریا در غروب", image: "../public/img/rever.jpg" },
+    { title: "جنگل", description: "طبیعت سرسبز", image: "../public/img/tree.jpg" },
   ];
 
   cardsData.forEach((card) => {
