--- a/public/swiper-div.html
+++ b/public/swiper-div.html
@@ -34,7 +34,7 @@
                 <h6 class="bg-gray-300 uppercase font-light h-6 w-[85px] rounded-[10px]  text-center mx-3.5 mt-4"><a href="#">aperitives</a></h6>
                 <h1 class="text-3xl  font-semibold capitalize mx-5 py-3">raspberry swiri cheesecake bars</h1>
                 <div class="flex justify-start items-center lg:my-3  space-x-6 mx-4 my-10">
-                <img class="rounded-full h-14 w-14"  src="../public/images/firt-ph.jpeg" alt="">
+                <img class="rounded-full h-14 w-14"  src="../public/img/firt-ph.jpeg" alt="">
                 <h6 class="text-center capitalize font-light">alessandro rossi</h6>
             </div>
             </div>
