--- a/public/calculitor.html
+++ b/public/calculitor.html
@@ -8,7 +8,7 @@
   <script src="calculitor.js" defer></script>
       <script src="https://kit.fontawesome.com/409fdf9367.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-gray-300">
   <div class="bg-gradient-to-br from-yellow-50 to-blue-50 h-screen flex items-center w-[80%] mx-auto justify-center">
 
   <div class="bg-white w-[400px] max-w-5xl mx-auto rounded-xl h-fit shadow-md p-6">
