--- a/public/weather.html
+++ b/public/weather.html
@@ -10,12 +10,26 @@
     <!-- global div -->
     <div class="h-screen w-full overflow-y-scroll bg-sky-200">
         <!-- div for input -->
-         <div></div>
+         <div class="w-full">
+            <input type="text" placeholder="enter a city">
+         </div>
 <!-- current weather -->
-<div class="w-full">
+<div class="w-full justify-between flex">
 <div class="">
-
+    <div class="w-[120px] h-[120px] text-center">
+<img class="h-full w-full" src="../public/img/sun.svg" alt="">
+    </div>
+    <div class="text-center">
+        <h1>wednesday</h1>
+        <span>10</span>
+        <span>-1</span>
+    </div>
+ 
 </div>
+   <div class="border p-4 rounded-md ">
+<h2>Humidity</h2>
+<span>34%</span>
+    </div>
 </div>
 <!-- 16 days wether -->
  <div></div>
