--- a/public/calculitor.html
+++ b/public/calculitor.html
@@ -56,6 +56,10 @@
       <button class="btn">−</button>
 
 
+      <button class="btn">1</button>
+      <button class="btn">2</button>
+      <button class="btn">3</button>
+      <button class="btn">+</button>
       
       <h1 class="bg-white border border-gray-200 rounded text-xl py-2 hover:bg-gray-100 shadow-sm text-center">+/-</h1>
       <button class="btn">0</button>
