--- a/public/calculitor.html
+++ b/public/calculitor.html
@@ -25,7 +25,7 @@
  <div id="result" class="bg-gray-100 text-center text-2xl p-3 rounded mb-4">0</div>
 
 
-<div class="flex space-x-[50px] space-y-3 ml-2">
+<div class="flex space-x-[50px]  ml-2">
     <h1>MC</h1>
     <h1>MR</h1>
     <h1>M+</h1>
